# algo-grind

./: .clangd  .classpath  .project  BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE.bazel
cpp/: BUILD.bazel
cpp/0001/: solution.cc  solution.h  test.cc
cpp/0020/: BUILD.bazel  solution.cc  solution.h  test.cc
cpp/0026/: solution.cc  solution.h  test.cc
cpp/0027/: solution.cc  solution.h  test.cc
cpp/0088/: solution.cc  solution.h  test.cc
cpp/0121/: solution.cc  solution.h  test.cc
cpp/0155/: solution.cc  solution.h  test.cc
cpp/0217/: solution.h  test.cc
cpp/0346/: solution.cc  solution.h  test.cc
cpp/1929/: solution.h  test.cc
go/0001/: BUILD.bazel
go/0011/: BUILD.bazel  solution.go  solution_test.go
go/0015/: BUILD.bazel  solution.go  solution_test.go
go/0020/: BUILD.bazel  solution.go  solution_test.go
go/0022/: BUILD.bazel  solution.go  solution_test.go
go/0042/: BUILD.bazel  solution.go  solution_test.go
go/0049/: BUILD.bazel  solution.go  solution_test.go
go/0088/: BUILD.bazel  solution.go  solution_test.go
go/0125/: BUILD.bazel  solution.go  solution_test.go
go/0155/: BUILD.bazel  solution.go  solution_test.go
go/0167/: BUILD.bazel  solution.go  solution_test.go
go/0200/: BUILD.bazel  solution.go  solution_test.go
go/0217/: BUILD.bazel  solution.go  solution_test.go
go/0242/: BUILD.bazel  solution.go  solution_test.go
go/0704/: BUILD.bazel  solution.go  solution_test.go
go/0739/: BUILD.bazel  solution.go  solution_test.go
go/0746/: BUILD.bazel  solution.go  solution_test.go
java/: BUILD.bazel
py/: BUILD.bazel
scripts/: check.py  cpp_create.py  generate_classpath.sh  go_create.py  java_create.py  pre-commit  py_create.py  test_summary.py
(+116 files in other folders)
